--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyCamera</string>
+
+    <string name="all_picture">所有图片</string>
+    <string name="zero_pager">0张</string>
 </resources>
